--- a/wp-content/themes/sixgill/less/desktop_search_results.less
+++ b/wp-content/themes/sixgill/less/desktop_search_results.less
@@ -34,7 +34,7 @@
 		&-title {
 			font-size: 60px;
 			letter-spacing: 1.8px;
-			margin-bottom: 20.5px;
+			margin-bottom: 9.5px;
 		}
 
 		&-subtitle {
